2010-02-18  Ivan Maidanski <ivmai@mail.ru>

	* src/atomic_ops/sysdeps/gcc/x86_64.h (AO_nop_full): Don't check
	for AO_USE_PENTIUM4_INSTRS (since "mfence" (SSE2) is supported on
	all x86_64/amd64 chips); remove the comment.
	* src/atomic_ops/sysdeps/msftc/x86_64.h (AO_nop_full): Ditto.
	* src/atomic_ops/sysdeps/msftc/x86_64.h (AO_nop_full): Define only
	if AO_ASM_X64_AVAILABLE.
	* src/atomic_ops/sysdeps/gcc/x86_64.h (AO_compare_and_swap_full):
	Use built-in __sync_bool_compare_and_swap() if GCC v4.2+.

2010-02-17  Ivan Maidanski <ivmai@mail.ru> (really Patrick Marlier)

	* src/atomic_ops/sysdeps/gcc/x86.h (AO_compare_and_swap_full,
	AO_compare_double_and_swap_double_full): Use EAX for the result
	since cmpxchg clobbers it.
	* src/atomic_ops/sysdeps/sunc/x86.h (AO_compare_and_swap_full,
	AO_compare_double_and_swap_double_full): Ditto.
	* src/atomic_ops/sysdeps/gcc/x86_64.h (AO_compare_and_swap_full,
	AO_compare_double_and_swap_double_full): Ditto.
	* src/atomic_ops/sysdeps/sunc/x86_64.h (AO_compare_and_swap_full,
	AO_compare_double_and_swap_double_full): Ditto.

2010-02-04  Ivan Maidanski <ivmai@mail.ru>

	* doc/Makefile.in: Regenerate.

2010-02-04  Ivan Maidanski <ivmai@mail.ru> (really Ian Wienand)

	* doc/Makefile.am: Remove duplicate file in the list.

2010-02-03  Ivan Maidanski <ivmai@mail.ru>

	* ChangeLog: Fix some typos.

2010-02-03  Ivan Maidanski <ivmai@mail.ru>

	* src/atomic_ops_stack.c (AO_stack_push_explicit_aux_release):
	Define "i" variable only if used (to suppress a compiler warning).

2010-02-02  Ivan Maidanski <ivmai@mail.ru>

	* src/atomic_ops/sysdeps/sunc/x86.h (AO_test_and_set_full): Fix
	"xchg" data size (remove "l" suffix).
	* src/atomic_ops/sysdeps/sunc/x86_64.h (AO_test_and_set_full):
	Ditto.
	* src/atomic_ops/sysdeps/sunc/x86_64.h (AO_test_and_set_full): Use
	AO_TS_t for oldval.
	* src/atomic_ops/sysdeps/sunc/x86.h
	(AO_compare_double_and_swap_double_full,
	AO_HAVE_compare_double_and_swap_double_full): Comment out (since