@@ -200,9 +200,16 @@
 #if defined(__GNUC__) && !defined(AO_USE_PTHREAD_DEFS) \
     && !defined(__INTEL_COMPILER)
 # if defined(__i386__)
+    /* We don't define AO_USE_SYNC_CAS_BUILTIN for x86 here because     */
+    /* it might require specifying additional options (like -march)     */
+    /* or additional link libraries (if -march is not specified).       */
 #   include "atomic_ops/sysdeps/gcc/x86.h"
 # endif /* __i386__ */
 # if defined(__x86_64__)
+#   if __GNUC__ > 4 || (__GNUC__ == 4 && __GNUC_MINOR__ >= 2)
+      /* It is safe to use __sync CAS built-in on this architecture.    */
+#     define AO_USE_SYNC_CAS_BUILTIN
+#   endif
 #   include "atomic_ops/sysdeps/gcc/x86_64.h"
 # endif /* __x86_64__ */
 # if defined(__ia64__)
@@ -251,6 +258,18 @@
 # if defined(__ia64__)
 #   include "atomic_ops/sysdeps/icc/ia64.h"
 #   define AO_GENERALIZE_TWICE
+# endif
+# if defined(__GNUC__)
+    /* Intel Compiler in GCC compatible mode */
+#   if defined(__i386__)
+#     include "atomic_ops/sysdeps/gcc/x86.h"
+#   endif /* __i386__ */
+#   if defined(__x86_64__)
+#     if __INTEL_COMPILER > 1110
+#       define AO_USE_SYNC_CAS_BUILTIN
+#     endif
+#     include "atomic_ops/sysdeps/gcc/x86_64.h"
+#   endif /* __x86_64__ */
 # endif
 #endif
 
